--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     padding: 0;
     box-sizing: 0;
     color: darkgreen;
+    background-color: gray;
     font-family: Arial, Helvetica, sans-serif;
 }
 
