--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: 0;
-    color: darkgreen;
+    color: rgb(84, 0, 122);
     background-color: gray;
     font-family: Arial, Helvetica, sans-serif;
 }
